# turnover

./: CMakeLists.txt  LICENSE  ProjectHome.md
boost/: CMakeLists.txt
crypto/: crc32.hpp  crc32.ipp  crc32_unittest.cpp  hmac.hpp  hmac.ipp  hmac_unittest.cpp  md5.hpp  md5.ipp  md5_unittest.cpp  sha1.hpp  sha1.ipp  sha1_unittest.cpp
message/: message.hpp
message/attribute/: attributes_template.hpp  decoded.hpp  decoding.hpp  encoding.hpp  type.hpp
message/attribute/detail/: attribute_base.hpp  errcode.hpp  fingerprint.hpp  int_types.hpp  ip_address.hpp  msgint.hpp  padding.hpp  unknown.hpp  varsize.hpp  xor_ip_address.hpp
message/attribute/detail/impl/: attribute_base.ipp  errcode.ipp  fingerprint.ipp  int_types.ipp  ip_address.ipp  msgint.ipp  padding.ipp  unknown.ipp  varsize.ipp  xor_ip_address.ipp
message/detail/: array.hpp  attribute_base.hpp  attribute_header.hpp  basic_attribute.hpp  byte_order.hpp  config.hpp  empty.hpp  endpoint.hpp  error_code.hpp  fingerprint.hpp  int_types.hpp  ip_address.hpp  message_header.hpp  message_integrity.hpp  msgint.hpp  padding.hpp  pop_options.hpp  push_options.hpp  traits.hpp  uint96_t.hpp  unknown.hpp  unknown_attributes.hpp  varsize.hpp  xor_endpoint.hpp  xor_ip_address.hpp
message/detail/crypto/: crc32.hpp  hmac.hpp  md5.hpp  sha1.hpp
message/detail/crypto/impl/: crc32.ipp  hmac.ipp  md5.ipp  sha1.ipp
message/detail/impl/: attribute_base.ipp  attribute_header.ipp  basic_attribute.ipp  byte_order.ipp  endpoint.ipp  error_code.ipp  fingerprint.ipp  int_types.ipp  ip_address.ipp  message_header.ipp  message_integrity.ipp  msgint.ipp  padding.ipp  unknown.ipp  unknown_attributes.ipp  varsize.ipp  xor_endpoint.ipp  xor_ip_address.ipp
test/: crc32_unittest.cpp  hmac_unittest.cpp  md5_unittest.cpp  message_unittest.cpp  sha1_unittest.cpp
